# NewTab

./: LICENSE  README.md  autocomplete.py  file_save.py  final.html  main.py  pull_images.py  pyproject.toml  render_img.py  requirements.txt  xhr.js
chrome-extension/: manifest.json  newtab.html  script.js
static/: banned_images.txt  image.js  image_urls.txt  styles.css  xhr.js
templates/: final.html  info.html
